fixing iframe on mobile

--- a/style.css
+++ b/style.css
@@ -243,7 +243,9 @@ p.caption {
 }
 
 p.mobile-iframe {
-  width: 33vw;
+  /* width: 33vw; */
+  height: 90vh;
+  width: min-content;
 }
 
 .ac-img-compact-inline-box .caption {
@@ -905,7 +907,8 @@ header .current-date {
   }
 
   p.mobile-iframe {
-    width: 90vw;
+    height: 90vh;
+    width: min-content;
   }
 
   .two-col {
